<resources>
    <string name="app_name">وزارة الخارجية</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="vehicle_record">Vehicle Record</string>
    <string name="dashboard">Dashboard</string>
    <string name="driver_set_up">Drivers</string>
    <string name="vehicle_set_up">Vehicle Set Up</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="vehicle_dashboard">Vehicle Dashboard</string>
    <string name="vehicle_record_details">Vehicle Record Details</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_user">SIGN UP USER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_type">User Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="vehicle_information">VEHICLE INFORMATION</string>
    <string name="vehicle_information_small">Vehicle Information</string>
    <string name="plate_number">Plate number</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="make">Make year</string>
    <string name="car_type">Car type</string>
    <string name="next">Next</string>
    <string name="registration">Registration</string>
    <string name="damage_report">Damage Report</string>
    <string name="confirmation">Confirmation</string>
    <string name="registration_end">Registration End</string>
    <string name="registration_start">Registration Start</string>
    <string name="registration_type">Registration Type</string>
    <string name="rental_information">Rental Information</string>
    <string name="provider">Provider</string>
    <string name="provider_phone_number">Provider Phone Number</string>
    <string name="edit">Edit</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="type">Type</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="lease_from">Lease From</string>
    <string name="lease_to">Lease To</string>
    <string name="additional_notes_here">Write any additional notes here ...</string>
    <string name="done">Done</string>
    <string name="rental_company_signature">Rental Company Signature</string>
    <string name ="driver_signature">Driver Signature</string>
    <string name="ministry_signature">Ministry Signature</string>
    <string name="sign_here">Sign Here</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="driver_id">Driver ID</string>
    <string name="address_line_1">Area</string>
    <string name="address_line_2">Address Line</string>
    <string name="nationality">Nationality</string>
    <string name="issue_date">Issue Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="car_utilities">Car Utilities</string>
    <string name="accident_report">Accident Report</string>
    <string name="handover">Handover</string>
    <string name="retrieval">Retrieval</string>
    <string name="retrieve">Retrieve</string>
    <string name="release">Release</string>
    <string name="vehicle_utilities">Vehicle Utilities</string>
    <string name="milage">Mileage</string>
    <string name="fuel_available">Fuel Available</string>
    <string name="car_items">Car Items</string>
    <string name="jack">Jack</string>
    <string name="tools">Tools</string>
    <string name="spare_tire">Spare tire</string>
    <string name="c_lighter">C. Lighter</string>
    <string name="floor_mat">Floor mat</string>
    <string name="car_has_damage">Car has damage</string>
    <string name="car_is_useable">Car is useable</string>
    <string name="managed_by">Managed by</string>
    <string name="driver">Driver</string>
    <string name="renalCompany">Rental Company</string>
    <string name="operation">Operation</string>
    <string name="vehicle_name">Vehicle name</string>
    <string name="wheel_cap">Wheel cap</string>
    <string name="search_vehicles">Search Vehicles</string>
    <string name="back">Back</string>
    <string name="driver_name">Driver Name</string>
    <string name="car">Car</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="search_records">Search Records</string>
    <string name="honda_accord">Honda Accord</string>
    <string name="vehicle_history">Vehicle History</string>
    <string name="vehicle_information2">Vehicle Information</string>
    <string name="saloon">Saloon</string>
    <string name="company">Company</string>
    <string name="car_details">Car Details</string>
    <string name="car_status">Car status</string>
    <string name="notes">Notes</string>
    <string name="sort_by">Sort by:</string>
    <string name="filtered_search">Filtered Search</string>
    <string name="type_filter">Type:</string>
    <string name="provider_filter">Provider:</string>
    <string name="status_filter">Status:</string>
    <string name="date_from_filter">Date from:</string>
    <string name="date_to_filter">Date to:</string>
    <string name="confirm">Confirm</string>
    <string name="signature">Signature</string>
    <string name="records">Records</string>
    <string name="vehicle">Vehicle</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chassis">VIN</string>
    <string name="motor_size">Engine size</string>
    <string name="been_added"> has been added by </string>
    <string name="been_taken"> has been taken out by </string>
    <string name="authorized"> and authorized by </string>
    <string name="returned_by"> has been returned by </string>
    <string name="released_by"> has been released by </string>
    <string name="damaged_by"> has been damaged with driver </string>
    <string name="interior">Interior</string>
    <string name="exterior">Exterior</string>
    <string name="you_didnt_select_car_type">You didn\'t select the car type</string>
    <string name="fill_missing_feilds">Please fill the missing fields</string>
    <string name="six_digits_or_less">"The Vehicle plate number should 6 digits or less"</string>
    <string name="nine_digits">"The CPR number should be 9 digits"</string>
    <string name="eight_digits">"Phone number must be 8 digits"</string>
    <string name="car_is_clean">Car is clean</string>
    <string name="username">Username</string>
    <string name="car_number">Car Number</string>
    <string name="destination">Destination</string>
    <string name="driver_record">Driver Record</string>
    <string name="search_driver">Search Driver</string>
    <string name="edit_driver">Edit Driver</string>
    <string name="delete">Delete</string>
    <string name="add_driver">Add Driver</string>


    <string-array name="manufacturers">
        <item>BMW</item>
        <item>Toyota</item>
        <item>Nissan</item>
        <item>Audi</item>
        <item>Volkswagen</item>
        <item>Ford</item>
        <item>Dodge</item>
        <item>Chevrolet</item>
        <item>Jeep</item>
        <item>Cadillac</item>
        <item>Honda</item>
        <item>Lexus</item>
        <item>Infiniti</item>
        <item>Mitsubishi</item>
        <item>Mazda</item>
        <item>Hyundai</item>
        <item>Kia</item>
    </string-array>
    <string-array name="make">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string-array name="color">
        <item>Blue</item>
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Maroon</item>
        <item>Brown</item>
        <item>Silver</item>
        <item>Grey</item>
        <item>Green</item>
        <item>Navy</item>
        <item>Light Blue</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="type">
        <item>Car type</item>
        <item>Saloon</item>
        <item>Jeep</item>
        <item>Family</item>
        <item>Van</item>
    </string-array>
    <string-array name="sort">
        <item>Car</item>
        <item>Driver Name</item>
        <item>Status</item>
        <item>Provider</item>
        <item>Make</item>
        <item>Date</item>
    </string-array>
    <string-array name="types">
        <item>Saloon</item>
        <item>Jeep</item>
        <item>Family</item>
        <item>Van</item>
    </string-array>
    <string-array name="statuses">
        <item>Vehicle status</item>
        <item>Busy</item>
        <item>Returned</item>
        <item>Released</item>
    </string-array>

    <string-array name="userType">
        <item>User Type</item>
        <item>Operator</item>
        <item>Admin</item>
    </string-array>
</resources>
