<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:id="@+id/vehicleSetUpButton"
                    android:src="@drawable/vehicle_setup_home"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_set_up"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/appGrey"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:id="@+id/driverSetUpButton"
                        android:src="@drawable/driver_setup_home" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/driver_set_up"
                        android:textColor="@color/appGrey"
                        android:textSize="24sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:id="@+id/dashboardButton"
                        android:src="@drawable/dashboard_home"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard"
                        android:textSize="24sp"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/appGrey"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:id="@+id/vehicleRecordButton"
                        android:src="@drawable/vehicle_record_home"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle_record"
                        android:textSize="24sp"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/appGrey"/>
                </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>